--- a/static/styles.css
+++ b/static/styles.css
@@ -18,7 +18,7 @@ body{
 .container{
     padding: 30px;
 	position: relative;
-	background: linear-gradient(45deg, #3d940a, #b0bebe, #a5c515);
+	background: linear-gradient(45deg, #3d940a, #cbd8d8, #a5c515);
 	background-size: 500% 500%;
 	animation: change-gradient 10s ease-in-out infinite;
 }
