--- a/templates/result.html
+++ b/templates/result.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
-		<title>Diabetes Predictor</title>
+		<title>Diabetes Predictoion web app</title>
 		<link rel="shortcut icon" href="{{ url_for('static', filename='diabetes-favicon.ico') }}">
 		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 		<script src="https://kit.fontawesome.com/5f3f547070.js" crossorigin="anonymous"></script>
@@ -14,9 +14,9 @@
 
         <!-- Website Title -->
 		<div class="container">
-            <h2 class='container-heading'><span class="heading_font">Diabetes Predictor</span></h2>
+            <h2 class='container-heading'><span class="heading_font">Diabetes Predictoion web app</span></h2>
             <div class='description'>
-    			<p>It's just a prediction; do consult a Doctor 😊</p>
+    			<p>Predict here; Do Consult doctor! 😊</p>
     		</div>
     	</div>
 
